# starry-next

./: .cursorignore  .gitmodules  Cargo.toml  test.sh  x86_64_output.txt
api/: Cargo.toml
api/src/: lib.rs  path.rs  ptr.rs
api/src/fd/: fs.rs  mod.rs  pipe.rs
api/src/imp/: ctypes.rs  mod.rs  signal.rs  sys.rs
api/src/imp/fs/: ctl.rs  fd_ops.rs  io.rs  mount.rs  pipe.rs  stat.rs
api/src/imp/fs/io_mpx/: poll.rs
api/src/imp/mm/: mmap.rs
api/src/imp/task/: clone.rs  execve.rs  schedule.rs
api/src/imp/utils/: time.rs
apps/junior/: testcase_list
apps/oscomp/: judge_libctest.py  testcase_list  testcase_list_full
apps/tests/: Makefile  open.c
core/src/: lib.rs  mm.rs  time.rs
scripts/: config.toml.temp  get_deps.sh  oscomp_test.sh
src/: entry.rs  main.rs  syscall.rs
src/syscall_imp/: mod.rs
starry/: index.html
