[package]
name = "starry-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axconfig.workspace = true
axfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axsync.workspace = true
axtask.workspace = true
arceos_posix_api = { path = "../.arceos/api/arceos_posix_api", features = ["uspace", "smp", "irq", "fs", "multitask", "net", "pipe", "select", "epoll"] }

axprocess.workspace = true
axsignal.workspace = true

axerrno.workspace = true
bitflags.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
memory_addr.workspace = true

starry-core.workspace = true

macro_rules_attribute = "0.2"
num_enum = { version = "0.7", default-features = false }
static_assertions = "1.1"

axfs_vfs = { git = "https://github.com/Ressed/axfs_crates.git" }
axio = "0.1.1"
flatten_objects = "0.2.3"
spin.workspace = true
axmm.workspace = true
axnet.workspace = true
axns.workspace = true
ctor_bare = "0.2.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"